--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
-  "proxy":"http://localhost:5000",
+  "proxy":"https://myburgermarket.herokuapp.com",
   "eslintConfig": {
     "extends": "react-app"
   },
