--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,8 @@
     "server": "nodemon server.js",
     "client": "npm start --prefix ../",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    // "heroku-postbuild": "cd backend && NPM_CONFIG_PRODUCTION=false npm install --prefix ../ && npm run build --prefix ../"
-    "heroku-postbuild": "ls"
+    "heroku-postbuild": "cd /backend && NPM_CONFIG_PRODUCTION=false npm install --prefix ../ && npm run build --prefix ../"
+
   },
   "keywords": [],
   "author": "",
