--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "server": "nodemon server.js",
     "client": "npm start --prefix ../",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix ../ && npm run build --prefix ../"
+    "heroku-postbuild": "cd backend && NPM_CONFIG_PRODUCTION=false npm install --prefix ../ && npm run build --prefix ../"
 
   },
   "keywords": [],
