--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "env": "0.0.2",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.10.11"
+        "mongoose": "^5.10.11",
+        "redux-saga": "^1.1.3"
     }
 }
